📚 Auto-update: News data refreshed - 2026-01-07 02:52 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -43486,5 +43486,189 @@
         "published": "Wed, 07 Jan 2026 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "For Indian startups, 2026 will be an inflection point where experiments of the years past create systems on which the future is built. There are patterns across data, founder behaviour, and market structure, elevated by the evolution of AI, that point to this."
+    },
+    {
+        "id": "https://www.theverge.com/column/857053/lenovo-ai-assistant-qira",
+        "title": "Lenovo is building an AI assistant that \u2018can act on your behalf\u2019",
+        "link": "https://www.theverge.com/column/857053/lenovo-ai-assistant-qira",
+        "published": "2026-01-06T21:30:00-05:00",
+        "source": "The Verge",
+        "summary": "While most attention in the AI race is focused on model builders and cloud platforms, Lenovo sits closer to millions of users than most companies. As the world's top PC maker by volume, Lenovo ships tens of millions of devices every year. What it decides to ship, bundle, and integrate can directly shape how AI [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/857229/samsung-display-intel-oled-smartpower-hdr",
+        "title": "Samsung and Intel&#8217;s OLED tech makes HDR easier on laptop battery life",
+        "link": "https://www.theverge.com/news/857229/samsung-display-intel-oled-smartpower-hdr",
+        "published": "2026-01-06T20:06:12-05:00",
+        "source": "The Verge",
+        "summary": "Samsung Display and Intel have teamed up on laptop technology called SmartPower HDR that they claim can minimize power usage while you're watching HDR content on an OLED screen. Intel showed off this technology last year, but Samsung Display is sharing details about how it works and the power savings you might expect. However, the [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/851643/moto-watch-android-smarwatch-ces-2026",
+        "title": "Motorola\u2019s latest smartwatch promises 13-day battery life and Polar-powered health tracking",
+        "link": "https://www.theverge.com/gadgets/851643/moto-watch-android-smarwatch-ces-2026",
+        "published": "2026-01-06T20:00:00-05:00",
+        "source": "The Verge",
+        "summary": "At CES, Motorola announced its latest smartwatch, the Moto Watch. According to Motorola, the Android watch offers up to 13 days of battery life, alongside Polar-powered health tracking, open-source software, and dual-frequency GPS - a combination that helps set it apart from Apple's and Google's flagship wearables. Battery life is easily its most notable feature. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852251/lenovos-auto-twist-laptop-is-going-from-concept-to-real-product",
+        "title": "Lenovo\u2019s Auto Twist laptop is going from concept to real product",
+        "link": "https://www.theverge.com/news/852251/lenovos-auto-twist-laptop-is-going-from-concept-to-real-product",
+        "published": "2026-01-06T20:00:00-05:00",
+        "source": "The Verge",
+        "summary": "At CES 2026, Lenovo is announcing a new ThinkBook Plus Gen 7 Auto Twist laptop. Once a concept, the 14-inch thin-and-light sports a motorized pivoting hinge, allowing it to twist and angle its screen toward you. It can be manually controlled, but the real trick is tracking your head and automatically adjusting to your position [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852276/the-new-lenovo-yoga-pro-9i-laptop-has-a-super-bright-tandem-oled-and-magnetic-stylus",
+        "title": "The new Lenovo Yoga Pro 9i laptop has a super-bright tandem OLED and magnetic stylus",
+        "link": "https://www.theverge.com/news/852276/the-new-lenovo-yoga-pro-9i-laptop-has-a-super-bright-tandem-oled-and-magnetic-stylus",
+        "published": "2026-01-06T20:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Lenovo's new pair of Yoga laptops for CES 2026 are its most powerful and most lightweight models. The flagship Yoga Pro 9i is a creator-focused laptop with a 16-inch 4K tandem OLED reaching 1,600 peak nits of brightness, Intel Panther Lake processor options, and up to an RTX 5070 for a discrete GPU. It also [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/lenovo-legion-pro-gaming-laptop-ultrawide-rollable-screen/",
+        "title": "Lenovo\u2019s Legion Pro Rollable Gaming Laptop Goes Ultrawide at the Press of a Key",
+        "link": "https://www.wired.com/story/lenovo-legion-pro-gaming-laptop-ultrawide-rollable-screen/",
+        "published": "Wed, 07 Jan 2026 01:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Lenovo brought a Legion gaming laptop to CES this year with a rollable OLED display that expands horizontally by six inches."
+    },
+    {
+        "id": "https://www.wired.com/story/motorola-razr-fold-ces-2026/",
+        "title": "Motorola Razr Fold Book-Style Foldable: Specs, Details, Release Date",
+        "link": "https://www.wired.com/story/motorola-razr-fold-ces-2026/",
+        "published": "Wed, 07 Jan 2026 01:00:00 +0000",
+        "source": "WIRED",
+        "summary": "At CES 2026, the company also announced a new smartwatch, stylus, Bluetooth tracker, and even a weird AI pendant."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2026/01/motorola-reveals-the-razr-fold-a-book-style-foldable-launching-this-summer/",
+        "title": "Motorola reveals the Razr Fold, a book-style foldable launching this summer",
+        "link": "https://arstechnica.com/gadgets/2026/01/motorola-reveals-the-razr-fold-a-book-style-foldable-launching-this-summer/",
+        "published": "Wed, 07 Jan 2026 01:00:06 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Motorola is light on details but heavy on hype for its first book-style foldable."
+    },
+    {
+        "id": "https://www.engadget.com/wearables/lenovo-just-revealed-a-concept-for-ai-powered-smartglasses-at-ces-010057822.html?src=rss",
+        "title": "Lenovo just revealed a concept for AI-powered smartglasses at CES",
+        "link": "https://www.engadget.com/wearables/lenovo-just-revealed-a-concept-for-ai-powered-smartglasses-at-ces-010057822.html?src=rss",
+        "published": "Wed, 07 Jan 2026 01:00:57 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Lenovo just revealed a new smartglasses concept design at <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-when-techs-biggest-conference-starts-on-january-4-120000189.html\">CES 2026</a>. The appropriately-named Lenovo AI Glasses Concept promises to transform &quot;how users interact with their surroundings and unifies their workflow.&quot;</p>\n<p>They look like a standard pair of specs and not all that different from something like <a href=\"https://www.engadget.com/wearables"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/lenovo-updates-its-legion-and-loq-gaming-laptops-for-ces-010042509.html?src=rss",
+        "title": "Lenovo updates its Legion and LOQ gaming laptops for CES",
+        "link": "https://www.engadget.com/gaming/pc/lenovo-updates-its-legion-and-loq-gaming-laptops-for-ces-010042509.html?src=rss",
+        "published": "Wed, 07 Jan 2026 01:00:42 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Lenovo has brought a slew of updates to its Legion and LOQ line of gaming laptops for CES 2026. The refreshed laptops are all built around Nvidia RTX 50-series GPUs.</p>\n<p>The new Legion 7a is both thinner and lighter than the previous generation and is aimed at gamers, creators, and working professionals. Lenovo says the new 7a will be powered by <a href=\"https://www.engadget.com/computing/amds-ryzen-ai-400-chips-are-a-big-boost-for-laptops-and-desktops-alike-033000635.html\"><ins>AMD Ryzen "
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/motorola-just-announced-a-foldable-phone-to-rival-samsung-and-google-at-ces-010015323.html?src=rss",
+        "title": "Motorola just announced a foldable phone to rival Samsung and Google at CES",
+        "link": "https://www.engadget.com/mobile/smartphones/motorola-just-announced-a-foldable-phone-to-rival-samsung-and-google-at-ces-010015323.html?src=rss",
+        "published": "Wed, 07 Jan 2026 01:00:15 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Motorola just announced its very first side-foldable smartphone, joining the ranks of the <a href=\"https://www.engadget.com/mobile/smartphones/google-pixel-10-pro-fold-review-the-tankiest-foldable-170051471.html\">Pixel 10 Pro Fold</a> and the <a href=\"https://www.engadget.com/mobile/smartphones/samsung-galaxy-z-fold-7-review-foldable-phone-nirvana-for-a-price-123004636.html\">Galaxy Z Fold 7</a>. The Razr Fold boasts an impressive 6.6-inch external screen and an 8.1-inch flexible main display."
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/lenovos-14th-gen-thinkpad-x1-carbon-comes-with-a-new-space-frame-design-010000262.html?src=rss",
+        "title": "Lenovo's 14th-gen ThinkPad X1 Carbon comes with a new Space Frame design",
+        "link": "https://www.engadget.com/computing/laptops/lenovos-14th-gen-thinkpad-x1-carbon-comes-with-a-new-space-frame-design-010000262.html?src=rss",
+        "published": "Wed, 07 Jan 2026 01:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Lenovo has unveiled a bunch of new laptops and concepts at <a class=\"link\" href=\"https://www.engadget.com/computing/how-to-watch-the-lenovo-tech-world-event-at-ces-2026-130004983.html\" target=\"_blank\">CES 2026</a>, including its latest ThinkPad X1 models. The ThinkPad X1 Carbon Gen 14 Aura Edition and ThinkPad X1 2-in-1 Gen 11 Aura Edition come with a new design the company has dubbed \u201cSpace Frame.\u201d </p><p>Lenovo calls Space Frame an \u201cengineering breakthrough\u201d and describes it as a design tha"
+    },
+    {
+        "id": "https://block81.com/blog/why-most-websites-dont-actually-need-cookie-consent-banners",
+        "title": "Most websites don't need cookie consent banners",
+        "link": "https://block81.com/blog/why-most-websites-dont-actually-need-cookie-consent-banners",
+        "published": "Wed, 07 Jan 2026 01:05:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46521179\">Comments</a>"
+    },
+    {
+        "id": "https://www.youtube.com/watch?v=9e0SQn9uUlw",
+        "title": "Hyundai Introduces Its Next-Gen Atlas Robot at CES 2026 [video]",
+        "link": "https://www.youtube.com/watch?v=9e0SQn9uUlw",
+        "published": "Tue, 06 Jan 2026 23:40:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46520508\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/weirdest-tech-ces-2026/",
+        "title": "The 7 weirdest tech gadgets I've seen at CES 2026 - so far",
+        "link": "https://www.zdnet.com/article/weirdest-tech-ces-2026/",
+        "published": "Wed, 07 Jan 2026 02:26:00 GMT",
+        "source": "Latest news",
+        "summary": "The show floor at CES is packed with strange, odd, and unusual gadgets. These ones stand out most."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lollipop-star-ces-2026/",
+        "title": "This bone conduction lollipop played music in my mouth at CES, and I'm speechless",
+        "link": "https://www.zdnet.com/article/lollipop-star-ces-2026/",
+        "published": "Wed, 07 Jan 2026 02:24:00 GMT",
+        "source": "Latest news",
+        "summary": "Lollipop Star uses bone conduction technology to play music through your mouth."
+    },
+    {
+        "id": "https://www.zdnet.com/article/motorola-razr-fold-ces-2026/",
+        "title": "Motorola unveils its first phone-to-tablet foldable at CES 2026, and it looks promising",
+        "link": "https://www.zdnet.com/article/motorola-razr-fold-ces-2026/",
+        "published": "Wed, 07 Jan 2026 01:01:05 GMT",
+        "source": "Latest news",
+        "summary": "Motorola's Razr Fold comes with a 8.1-inch inner display, a robust set of cameras, and AI-powered features."
+    },
+    {
+        "id": "https://www.zdnet.com/article/thinkpad-x1-carbon-gen-14/",
+        "title": "I saw the future of repairability in Lenovo's ThinkPad X1 Carbon, and it's double-sided",
+        "link": "https://www.zdnet.com/article/thinkpad-x1-carbon-gen-14/",
+        "published": "Wed, 07 Jan 2026 01:01:04 GMT",
+        "source": "Latest news",
+        "summary": "Lenovo commits to repairability with a redesigned 'Space Frame' motherboard with components on both sides."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/meta-names-microsofts-mahoney-as-chief-legal-officer/articleshow/126385347.cms",
+        "title": "Meta names Microsoft's Mahoney as chief legal officer",
+        "link": "https://economictimes.indiatimes.com/tech/technology/meta-names-microsofts-mahoney-as-chief-legal-officer/articleshow/126385347.cms",
+        "published": "Wed, 07 Jan 2026 08:04:16 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Meta Platforms has appointed C.J. Mahoney as its new chief legal officer, with the former Microsoft executive set to report directly to CEO Mark Zuckerberg. He replaces Jennifer Newstead, who is leaving to join Apple. The move comes as Meta faces lawsuits and regulatory scrutiny over user safety, particularly around minors."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/elon-musks-xai-raises-20-billion-in-nvidia-backed-funding-round/articleshow/126384925.cms",
+        "title": "Elon Musk's xAI raises $20 billion in Nvidia-backed funding round",
+        "link": "https://economictimes.indiatimes.com/tech/funding/elon-musks-xai-raises-20-billion-in-nvidia-backed-funding-round/articleshow/126384925.cms",
+        "published": "Wed, 07 Jan 2026 07:14:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Elon Musk\u2019s AI startup, xAI, said on Tuesday that it has raised $20 billion in fresh funding from participants including Nvidia, exceeding its original $15 billion target. Announcing the funding round, xAI touted significant progress in 2025, including the deployment of what it claims are the world's largest AI supercomputers."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/consumer-founders-deeptech-play-vc-fundraising-swells-in-2025/articleshow/126384691.cms",
+        "title": "Consumer founders\u2019 deeptech play; VC fundraising swells in 2025",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/consumer-founders-deeptech-play-vc-fundraising-swells-in-2025/articleshow/126384691.cms",
+        "published": "Wed, 07 Jan 2026 07:07:34 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Happy Wednesday! With the deeptech wave rising in India, consumer tech founders are moving in. This and more in today's ETtech Morning Dispatch."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/can-factories-operate-solely-renewable-energy-solar-wind",
+        "title": "Can factories operate solely on renewable energy?",
+        "link": "https://yourstory.com/2026/01/can-factories-operate-solely-renewable-energy-solar-wind",
+        "published": "Wed, 07 Jan 2026 01:40:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The story of India\u2019s renewable energy has picked up a good pace in recent years. By August 31, 2025, approximately 242.6 GW of renewable capacity had been installed in the country, which is a clear reflection of both commitment and steady progress."
+    },
+    {
+        "id": "https://inc42.com/buzz/gainbitcoin-back-on-the-radar-delhi-ncr-funding-report-more/",
+        "title": "GainBitcoin Back On The Radar, Delhi NCR Funding Report & More",
+        "link": "https://inc42.com/buzz/gainbitcoin-back-on-the-radar-delhi-ncr-funding-report-more/",
+        "published": "Wed, 07 Jan 2026 02:30:45 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"GainBitcoin Back On ED Radar, Delhi NCR Funding Report &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-Daily-Brief-68.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Raj Kundra Tangled In GainBitcoin Mess The alleged INR 90,000 Cr GainBitcoin scam is back in the news. Raj Kundra,&#8230;"
     }
 ]
