--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -43670,5 +43670,117 @@
         "published": "Wed, 07 Jan 2026 02:30:45 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"GainBitcoin Back On ED Radar, Delhi NCR Funding Report &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-Daily-Brief-68.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Raj Kundra Tangled In GainBitcoin Mess The alleged INR 90,000 Cr GainBitcoin scam is back in the news. Raj Kundra,&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/mckinsey-and-general-catalyst-execs-say-the-era-of-learn-once-work-forever-is-over/",
+        "title": "McKinsey and General Catalyst execs say the era of \u2018learn once, work forever\u2019 is over",
+        "link": "https://techcrunch.com/2026/01/06/mckinsey-and-general-catalyst-execs-say-the-era-of-learn-once-work-forever-is-over/",
+        "published": "Wed, 07 Jan 2026 03:09:04 +0000",
+        "source": "TechCrunch",
+        "summary": "Calacanis, General Catalyst's Taneja, and McKinsey's Sternfels discussed how AI is reshaping technology and the labor force."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/metas-manus-news-is-getting-different-receptions-in-washington-and-beijing/",
+        "title": "Meta\u2019s Manus news is getting different receptions in Washington and Beijing",
+        "link": "https://techcrunch.com/2026/01/06/metas-manus-news-is-getting-different-receptions-in-washington-and-beijing/",
+        "published": "Wed, 07 Jan 2026 02:52:57 +0000",
+        "source": "TechCrunch",
+        "summary": "Chinese officials are reportedly reviewing whether the Meta deal violates technology export controls, potentially giving Beijing leverage it wasn't initially perceived as having."
+    },
+    {
+        "id": "https://www.theverge.com/tech/857252/intel-handheld-gaming-pc-panther-lake-custom-cpu",
+        "title": "Intel is planning a custom Panther Lake CPU for handheld PCs",
+        "link": "https://www.theverge.com/tech/857252/intel-handheld-gaming-pc-panther-lake-custom-cpu",
+        "published": "2026-01-06T22:16:58-05:00",
+        "source": "The Verge",
+        "summary": "Intel announced yesterday that it's developing an entire \"handheld gaming platform\" powered by its new Panther Lake chips, and joining an increasingly competitive field. Qualcomm is hinting about potential Windows gaming handhelds showing up at the Game Developers Conference in March, and AMD's new Strix Halo chips could lead to more powerful handhelds. According to [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/this-game-controller-has-a-force-feedback-steering-wheel-lodged-in-the-middle-034521141.html?src=rss",
+        "title": "This game controller has a force feedback steering wheel lodged in the middle",
+        "link": "https://www.engadget.com/gaming/this-game-controller-has-a-force-feedback-steering-wheel-lodged-in-the-middle-034521141.html?src=rss",
+        "published": "Wed, 07 Jan 2026 03:45:21 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Not everyone remembers the unique controllers that never quite made it. As third-party peripheral makers attempt to offer gamers something different to the likes of DualSense and Joy-Cons, they often have to go in a different direction. GameSir\u2019s Swift Drive (apparently a working product name) is definitely that. And if you remember 1998\u2019s <a href=\"https://en.wikipedia.org/wiki/Jogcon\"><ins>JogCon</ins></a> for the PS1, there\u2019s definitely some shared DNA.</p>\n<p>It features a compact steering"
+    },
+    {
+        "id": "https://jasoneckert.github.io/myblog/how-microsoft-killed-my-snapdragon-devkit/",
+        "title": "Microsoft probably killed my Snapdragon Dev Kit",
+        "link": "https://jasoneckert.github.io/myblog/how-microsoft-killed-my-snapdragon-devkit/",
+        "published": "Wed, 07 Jan 2026 02:37:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46521860\">Comments</a>"
+    },
+    {
+        "id": "https://advanced.onlinelibrary.wiley.com/doi/10.1002/adsr.202500124",
+        "title": "Electronic nose for indoor mold detection and identification",
+        "link": "https://advanced.onlinelibrary.wiley.com/doi/10.1002/adsr.202500124",
+        "published": "Wed, 07 Jan 2026 00:31:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46520935\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/top-favorite-contact-apps-desktop-mobile-ai/",
+        "title": "My favorite contact apps for every platform - including one I built with AI",
+        "link": "https://www.zdnet.com/article/top-favorite-contact-apps-desktop-mobile-ai/",
+        "published": "Wed, 07 Jan 2026 03:00:56 GMT",
+        "source": "Latest news",
+        "summary": "Contact apps are an important tool for busy lives. But which one should you be using? Here's my short list of favorites."
+    },
+    {
+        "id": "https://www.zdnet.com/article/5-ways-to-use-governance-challenge-regulation-ai-innovation/",
+        "title": "5 ways rules and regulations can help guide your AI innovation",
+        "link": "https://www.zdnet.com/article/5-ways-to-use-governance-challenge-regulation-ai-innovation/",
+        "published": "Wed, 07 Jan 2026 03:00:42 GMT",
+        "source": "Latest news",
+        "summary": "Governance, when handled correctly, can become a route to the successful implementation of emerging technologies. Five business leaders share their experiences."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/samsung-to-focus-on-hybrid-ai-open-collaborations-knox-security-to-safeguard-privacy/articleshow/126386083.cms",
+        "title": "Samsung to focus on hybrid AI, open collaborations, Knox security to safeguard privacy",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/samsung-to-focus-on-hybrid-ai-open-collaborations-knox-security-to-safeguard-privacy/articleshow/126386083.cms",
+        "published": "Wed, 07 Jan 2026 09:06:36 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Samsung said it will put governance, privacy and security at the centre of its AI push, aiming to make AI a trusted daily companion. Speaking at CES 2026, executives outlined a hybrid on-device and cloud approach backed by Knox security. Panellists stressed transparency, collaboration and safeguards to counter AI risks."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/lenovo-expands-ai-lineup-with-nvidia-gigafactory-tie-up-qira-platform/articleshow/126385940.cms",
+        "title": "Lenovo expands AI lineup with Nvidia gigafactory tie-up, Qira platform",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/lenovo-expands-ai-lineup-with-nvidia-gigafactory-tie-up-qira-platform/articleshow/126385940.cms",
+        "published": "Wed, 07 Jan 2026 08:49:49 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The gigafactory with Nvidia enables AI cloud providers to bring enterprise AI workloads online faster and \u200bmove customers from creation \u200bto production, Lenovo said at \u200cCES \u200d2026, an annual consumer electronics \u200dtrade show."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-ceo-praises-robots-as-ai-immigrants/articleshow/126385939.cms",
+        "title": "Nvidia CEO praises robots as 'AI immigrants'",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-ceo-praises-robots-as-ai-immigrants/articleshow/126385939.cms",
+        "published": "Wed, 07 Jan 2026 08:49:31 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Nvidia chief executive Jensen Huang described robots as \"AI immigrants\" on Tuesday, arguing they could solve a global labor shortage that is hampering manufacturing."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/from-music-to-mind-reading-ai-startups-bet-on-earbuds/articleshow/126385930.cms",
+        "title": "From music to mind reading: AI startups bet on earbuds",
+        "link": "https://economictimes.indiatimes.com/tech/startups/from-music-to-mind-reading-ai-startups-bet-on-earbuds/articleshow/126385930.cms",
+        "published": "Wed, 07 Jan 2026 08:49:10 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "AI companies are on the hunt to design the ideal device to deliver AI's superpowers, and some new enterprises are convinced that headphones or earbuds are the way. That's the opportunity for our earbuds,\" explained Shawn Ma, CEO of Viaim, whose devices are compatible with all brands, including iPhones in China."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/china-reviews-metas-purchase-of-ai-startup-manus-ft/articleshow/126385692.cms",
+        "title": "China reviews Meta's purchase of AI startup Manus: FT",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/china-reviews-metas-purchase-of-ai-startup-manus-ft/articleshow/126385692.cms",
+        "published": "Wed, 07 Jan 2026 08:28:56 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Chinese authorities are reviewing Meta\u2019s acquisition of AI startup Manus for possible breaches of technology export rules, the Financial Times reported. Officials are assessing whether moving Manus\u2019 staff and technology to Singapore  and the consequent sale \u200bto Meta required an export licence. The review is at an early stage and may not lead to a formal investigation, but could still affect the deal."
+    },
+    {
+        "id": "https://inc42.com/buzz/arrowhead-raises-3-mn-to-scale-voice-ai-for-bfsi-sales/",
+        "title": "Arrowhead Raises $3 Mn To Scale Voice AI For BFSI Sales",
+        "link": "https://inc42.com/buzz/arrowhead-raises-3-mn-to-scale-voice-ai-for-bfsi-sales/",
+        "published": "Wed, 07 Jan 2026 03:21:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1801\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Devyani-Gupta-and-Vengadanathan-Srinivasan-scaled.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"2560\" />Bengaluru-based voice AI startup Arrowhead has raised $3 Mn (INR 27 Cr) funding in its seed round led by early-stage&#8230;"
     }
 ]
