📚 Auto-update: News data refreshed - 2026-01-07 04:37 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -43782,5 +43782,37 @@
         "published": "Wed, 07 Jan 2026 03:21:52 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1801\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Devyani-Gupta-and-Vengadanathan-Srinivasan-scaled.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"2560\" />Bengaluru-based voice AI startup Arrowhead has raised $3 Mn (INR 27 Cr) funding in its seed round led by early-stage&#8230;"
+    },
+    {
+        "id": "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5877662",
+        "title": "On the slow death of scaling",
+        "link": "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5877662",
+        "published": "Wed, 07 Jan 2026 03:48:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46522308\">Comments</a>"
+    },
+    {
+        "id": "https://www.inc.com/jessica-stillman/google-co-founder-sergey-brins-unretirement-is-a-lesson-for-the-rest-of-us/91280208",
+        "title": "Sergey Brin's Unretirement",
+        "link": "https://www.inc.com/jessica-stillman/google-co-founder-sergey-brins-unretirement-is-a-lesson-for-the-rest-of-us/91280208",
+        "published": "Thu, 01 Jan 2026 09:30:28 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46452641\">Comments</a>"
+    },
+    {
+        "id": "https://twitter.com/bcherny/status/2007179832300581177",
+        "title": "The creator of Claude Code's Claude setup",
+        "link": "https://twitter.com/bcherny/status/2007179832300581177",
+        "published": "Fri, 02 Jan 2026 22:07:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46470017\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/starbucks-everest-spices-labelblind-automating-food-labelling",
+        "title": "From Starbucks to Everest Spices: How LabelBlind is automating food labelling across India",
+        "link": "https://yourstory.com/2026/01/starbucks-everest-spices-labelblind-automating-food-labelling",
+        "published": "Wed, 07 Jan 2026 02:33:19 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Where food science meets deep reg-tech, LabelBlind is building export-ready labels for Starbucks, Amul, Everest and more."
     }
 ]
