📚 Auto-update: News data refreshed - 2026-01-07 06:19 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -43814,5 +43814,13 @@
         "published": "Wed, 07 Jan 2026 02:33:19 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Where food science meets deep reg-tech, LabelBlind is building export-ready labels for Starbucks, Amul, Everest and more."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/microsoft-may-announce-job-cuts-in-2026-reports/articleshow/126388191.cms",
+        "title": "Microsoft may announce job cuts in 2026: Reports",
+        "link": "https://economictimes.indiatimes.com/tech/technology/microsoft-may-announce-job-cuts-in-2026-reports/articleshow/126388191.cms",
+        "published": "Wed, 07 Jan 2026 11:44:06 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Microsoft could be planning a round of job cuts this month, affecting teams in Gaming, Azure, and Sales, reports HR Digest. Between 5% and 10% of staff may be impacted, as the company aims to reduce middle management and increase individual contributor ratios. Microsoft, however, has not officially confirmed or denied the potential layoffs."
     }
 ]
