--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -43902,5 +43902,37 @@
         "published": "Wed, 07 Jan 2026 02:28:26 GMT",
         "source": "YourStory RSS Feed",
         "summary": "From premium babycare and petcare to AI-led shopping and the next phase of quick commerce, YourStory spotlights the trends that will define the Indian consumer in 2026."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ces-2026-live-updates-1-7-26/",
+        "title": "CES 2026 live: Biggest news on TVs, laptops, weird gadgets that stole our attention",
+        "link": "https://www.zdnet.com/article/ces-2026-live-updates-1-7-26/",
+        "published": "Wed, 07 Jan 2026 07:39:00 GMT",
+        "source": "Latest news",
+        "summary": "The world's largest technology trade show is underway, and we're tracking the top announcements from leading brands all week long."
+    },
+    {
+        "id": "https://inc42.com/buzz/proptech-startup-flent-bags-inr-21-cr-to-launch-operations-in-mumbai-gurugram/",
+        "title": "Proptech Startup Flent Bags INR 21 Cr To Launch Operations In Mumbai, Gurugram",
+        "link": "https://inc42.com/buzz/proptech-startup-flent-bags-inr-21-cr-to-launch-operations-in-mumbai-gurugram/",
+        "published": "Wed, 07 Jan 2026 08:13:15 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Flent funding\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Flent-Founders-Feature.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Bengaluru-based proptech startup Flent has raised INR 21 Cr (about $2.3 Mn) in its pre-Series A round led by Incubate&#8230;"
+    },
+    {
+        "id": "https://inc42.com/startups/how-koskii-is-merging-indias-textile-heritage-tech-and-d2c-ambition/",
+        "title": "How Koskii Is Merging India\u2019s Textile Heritage, Tech And D2C Ambition",
+        "link": "https://inc42.com/startups/how-koskii-is-merging-indias-textile-heritage-tech-and-d2c-ambition/",
+        "published": "Wed, 07 Jan 2026 07:45:15 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"How Koskii Is Merging India&#039;s Textile Heritage, Tech And D2C Ambition\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Kosikii-ftr-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />In 1991, at the age of 17, Umar Akhter worked at a sari store located in Kolar, a small town&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/human-ai-hybrid-the-new-reality-for-indian-startups/",
+        "title": "Human-AI Hybrid: The New Reality For Indian Startups",
+        "link": "https://inc42.com/features/human-ai-hybrid-the-new-reality-for-indian-startups/",
+        "published": "Wed, 07 Jan 2026 07:40:36 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Human-AI Hybrid: The New Reality For Indian Startups\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"675\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/AI-Newsletter-social.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1200\" />Introducing The AI Shift by Inc42, our all-new weekly newsletter that delves deep into the world of artificial intelligence, LLMs,&#8230;"
     }
 ]
